# anki-words-rust

./: .gitignore  Cargo.toml  TODO.md
src/: anki_connect.rs  db.rs  google_auth.rs  google_translate.rs  main.rs  model.rs  oxford_dict.rs  readwise.rs  util.rs
