[package]
name = "anki-words-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9.3"
regex = "1"
itertools = "0.10"
chrono = "0.4"
anyhow = { version = "1.0", features = ["backtrace"] }
jwt = { package = "jsonwebtoken", version = "8.1.1" }
strum = { version = "0.24", features = ["derive"] }
inquire = "0.5.2"
maud = "0.24"
directories = "4.0"
clap = { version = "4.0.26", features = ["derive"] }
